# wenyi

./: CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
docs/: README.zh.md  configuration.md  pipeline.md  usage.md
docs/zh/: CONTRIBUTING.md  README.md  configuration.md  pipeline.md  usage.md
tests/: sample_data.py  test_assemble.py  test_bilingual.py  test_cli.py  test_config.py  test_glossary.py  test_glossary_agents.py  test_ingest.py  test_llm.py  test_llm_gemini.py  test_newfeatures.py  test_orchestrator.py  test_pdf_support.py  test_translator.py  test_usage.py
trans_novel/: __init__.py  cli.py  config.py
trans_novel/agents/: analyzer.py  base.py  consistency.py  langprofile.py  polisher.py  prompts.py  reviewer.py  synopsis.py
trans_novel/assemble/: about.py  report.py  translator.py  writer.py
trans_novel/glossary/: extractor.py  store.py
trans_novel/ingest/: epub_chapters.py  epub_reader.py  epub_toc.py  fb2_reader.py  html_reader.py  md_reader.py  models.py  segmenter.py  text_reader.py
trans_novel/llm/: base.py  factory.py  usage.py
trans_novel/llm/providers/: _openai_compatible.py  deepseek.py  fake.py  gemini.py  ollama.py  openai.py  openai_compatible.py  openrouter.py  vllm.py
trans_novel/pipeline/: checks.py  context.py  orchestrator.py  runstore.py
trans_novel/postprocess/: punct.py
