[project]
name = "trans-novel"
version = "0.2.0"
description = "A multi-agent long-form novel translation system with context, terminology, polishing, and review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",        # DeepSeek（OpenAI 兼容）调用
    "pydantic>=2.7",       # 模型 / 配置校验
    "pyyaml>=6.0",         # 读取 config.yaml
    "tenacity>=8.2",       # LLM 调用重试/退避
    "beautifulsoup4>=4.12", # EPUB 正文块提取
    "httpx>=0.27",         # PDF 转换服务 HTTP 客户端
    "lxml>=5.0",           # bs4 的 XHTML 解析后端
    "ebooklib>=0.18",      # EPUB 读写
    "typer>=0.12",         # CLI
    "rich>=13.7",          # 表格 / 进度条
    "pypdf>=6.14.2",
    "google-genai>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
trans-novel = "trans_novel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trans_novel"]
